[podman-toolboxes] add rename package to audio-flac containerfile

--- a/audio-flac/Containerfile
+++ b/audio-flac/Containerfile
@@ -7,5 +7,6 @@ RUN apt update -y && apt install -y \
     flac \
     wavpack \
     parallel \
+    rename \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
